# Fall-Detection-POC

./: .gitattributes  .gitignore  COMPLETE_PROJECT_INTERVIEW_GUIDE.md  HUMAN_FALL_DETECTION_INTERVIEW_GUIDE.docx  PROJECT_QUICK_REVISION.md  Project Guide  README.md  pyproject.toml
.streamlit/: config.toml
histories/hyperparameter_training/: tuned_custom_cnn.csv  tuned_mobilenetv3_phase1.csv  tuned_mobilenetv3_phase2.csv  tuned_resnet50_phase1.csv  tuned_resnet50_phase2.csv
notebooks/: 03_Error_Analysis.ipynb  04_GradCAM_Analysis.ipynb  05_Baseline_Model_Comparison.ipynb  06_Hyperparameter_Training.ipynb  blur_leakage_test.ipynb  custom_cnn_training.ipynb  model_comparison.ipynb  resnet50_training.ipynb
outputs/error_analysis/: calibrated_prediction_analysis.csv  false_negatives.csv  false_positives.csv  prediction_error_analysis.csv  temperature_rmse_comparison.csv  temperature_search_results.csv  temperature_summary.csv
outputs/gradcam/: final_gradcam_results.csv  gradcam_results.csv  gradcam_results_with_observations.csv
outputs/model_comparison/: baseline_model_metrics.csv  confusion_matrix_before_after.csv  custom_cnn_baseline_classification_report.txt  custom_cnn_baseline_predictions.csv  mobilenetv3_baseline_classification_report.txt  mobilenetv3_baseline_predictions.csv  (+4 more)
results/: baseline_training_history.json  custom_cnn_metrics.txt  mobilenetv3_metrics.txt  model_comparison.csv  model_comparison.txt  resnet50_metrics.txt  resnet50_training_history.json
scripts/: run_error_analysis.py
streamlit_app/: app.py  requirements.txt
(+1 files in other folders)
